# jupyter-switch

./: .gitignore  README.md  README_zh.md  pyproject.toml  test_notebook.ipynb  test_notebook.ipynb.bak  test_notebook.md  test_uvx_naming.py
src/jupyter_switch/: mcp_server.py  switch_between_md_and_ipynb.py
