[project]
name = "jupyter-switch"
version = "0.1.3"
description = "Convert between Markdown (.md) and Jupyter Notebook (.ipynb) formats"
readme = "README.md"
authors = [
    { name = "ChengZi", email = "277584121@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
jupyter-switch = "jupyter_switch:main"
jupyter-switch-mcp = "jupyter_switch.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
